[form-builder] Fix overflow in PT insert menu

--- a/packages/@sanity/form-builder/src/inputs/PortableText/Toolbar/InsertMenu.css
+++ b/packages/@sanity/form-builder/src/inputs/PortableText/Toolbar/InsertMenu.css
@@ -6,6 +6,8 @@
 
 .menu {
   padding: var(--extra-small-padding) 0;
+  max-height: calc(50vh - 6em);
+  overflow: auto;
 }
 
 .menuItem {
